Tiny fixes
- Fixes contact items being broken in about section
- Fixes ignore cookie thingy

--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -45,7 +45,7 @@
 
 /* ======= Contact Links ======= */
 .contact-item {
-	&:not(:first-child) { margin-left: 68px; }
+	&:not(:first-child) { margin-left: 67px; }
 }
 .contact-link {
 	@extend %sprited;
